--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -6,10 +6,10 @@
   - name: updating apt
     command : sudo apt-get update
 
-  - name : Install Docker
-    command : sudo apt-get install -y docker.io
-    become : yes
-    become_user : root
+ # - name : Install Docker
+  #  command : sudo apt-get install -y docker.io
+   # become : yes
+    #become_user : root
 
   - name : Start Docker Service
     command : sudo systemctl start docker
@@ -17,4 +17,4 @@
     become_user : root
 
   - name: Deploy Docker Container
-    command: docker run -itd -p 32303:8083 docker danishdockerhub/staragile-project-healthcare:v1
+    command: docker run -itd -p 32304:8083 docker danishdockerhub/staragile-project-healthcare:v1
